--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     </li>
                     <li class="class-card">
                         <div class="image-wrapper">
-                            <img src="img/card55.jpg" alt="카드5" class="class-image" />
+                            <img src="img/card5.jpg" alt="카드5" class="class-image" />
                         </div>
                         <a href="#https://youtu.be/ISDUTKY1d6E" target="_blank" alt=" 방송모음링크5">
                             <div class="class-container">
@@ -238,9 +238,9 @@
     </section>
 
     <footer class="inner">
-        <div class="footer-massage">MAINSTREAM</div>
-        <div class="footer-contect">HOME PAGE: https://www.main-stream.ne</div>
-        <div class="footer-copyright">©2019 by MAINSTREAM</div>
+        <div class="footer-massage">TWN2021</div>
+        <div class="footer-contect">HOME PAGE: https://github.com/twn2021/insta</div>
+        <div class="footer-copyright">©2021 by TWN2021</div>
     </footer>
 
     <a id="backtotop" class="show"></a>
