--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
     <footer class="inner">
         <div class="footer-massage">TWN2021</div>
-        <div class="footer-contect">HOME PAGE: https://github.com/twn2021/insta</div>
+        <div class="footer-contect">HOME PAGE: https://github.com/twn2021</div>
         <div class="footer-copyright">©2021 by TWN2021</div>
     </footer>
 
